--- a/jsnack2/index.html
+++ b/jsnack2/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 id="odd-numbers"></h1>
     <script src="./script.js" type="text/javascript"></script>
 </body>
 </html>
