[UPD] Added h1 with final sum in

--- a/jsnack3/index.html
+++ b/jsnack3/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 id="final-sum"></h1>
     <script src="./script.js" type="text/javascript"></script>
 </body>
 </html>
